deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: totp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-app
  namespace: totp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-app
  template:
    metadata:
      labels:
        app: spring-app
    spec:
      containers:
      - name: spring-app
        image: gjorginechovski/spring-app:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: spring-app
  namespace: totp
spec:
  selector:
    app: spring-app
  ports:
  - name: http
    port: 8080
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-ingress
  namespace: totp
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    traefik.ingress.kubernetes.io/ssl-passthrough: "false"
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spring-app
            port:
              number: 8080
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: totp
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:13
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: totp
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
